# worddetector

./: .pre-commit-config.yaml  Dockerfile  action.yml  build_n_deploy.sh  create_compute_cloud.sh  deck.py  detector.py  helpers.py  image_processor.py  models.py  pyproject.toml
.github/workflows/: deploy_workflow.yml
corpus/: normalized_corpus_rus.txt
tests/: test_corpus.py  test_field_detection.py
worddetector/: deck_leetcoded.py  helpers.py  image_processor.py  models.py  settings.py
worddetector/telegram/: handlers.py
