[tool.poetry]
name = "worddetector"
version = "0.1.0"
description = ""
authors = ["rvtsukanov <Roman.Tsukanov@x5.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^9.5.0"
opencv-python = "^4.7.0.72"
pytesseract = "^0.3.10"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
