[tool.poetry]
name = "worddetector"
version = "0.1.0"
description = ""
authors = ["rvtsukanov <Roman.Tsukanov@x5.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^9.5.0"
opencv-python = "^4.7.0.72"
pytesseract = "^0.3.10"
fire = "^0.5.0"
yandexcloud = "^0.213.0"
pytelegrambotapi = "^4.12.0"
black = "^23.3.0"
pytest = "^7.3.1"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
